force-app/main/default/objects/Document_Agent_Force_Validation_Log__c/Document_Agent_Force_Validation_Log__c.object-meta.xml
<CustomObject>
    <description>This object contains success or error response from AgentForce Prompt builder.</description>
    <label>Document Agent Force Validation Log</label>
    <nameField>
        <displayFormat>DV-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Validation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Agent Force Validation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>