force-app/main/default/objects/Document_Agent_Force_Validation_Log__c/fields/Content_Document_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Record_Id__c</fullName>
    <description>Stores Document Document Record Id</description>
    <label>Content Document Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>