force-app/main/default/objects/Document_Agent_Force_Validation_Log__c/fields/Document_Validation_Response__c.field-meta.xml
<CustomField>
    <fullName>Document_Validation_Response__c</fullName>
    <label>Document Validation Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>