force-app/main/default/objects/Document_Agent_Force_Validation_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Store Document Validation Status Success or Failed</description>
    <label>Status</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>